// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ColorDisplay renders ColorDisplay 1`] = `
<Fragment>
  <h2
    id="test"
  >
    Test Head
  </h2>
  <p>
    This is a description
  </p>
  <ul
    className="list color-preview"
  >
    <li
      key="0"
    >
      <ColorPreview
        hex="#FDC129"
        name="Yellow"
      />
    </li>
    <li
      key="1"
    >
      <ColorPreview
        hex="#FDC129"
        name="Yellow"
      />
    </li>
  </ul>
</Fragment>
`;

exports[`Component: ColorDisplay renders colorDisplay with subLists when subListNames provided 1`] = `
<Fragment>
  <h2
    id="test"
  >
    Test Head
  </h2>
  <p>
    This is a description
  </p>
  <div
    key="0"
  >
    <h3>
      Communication color
    </h3>
    <ul
      className="list color-preview"
    >
      <li
        key="0"
      >
        <ColorPreview
          hex="#FDC129"
          name="Yellow"
        />
      </li>
    </ul>
  </div>
  <div
    key="1"
  >
    <h3>
      Text color
    </h3>
    <ul
      className="list color-preview"
    >
      <li
        key="0"
      >
        <ColorPreview
          hex="#512B2B"
          name="Brown"
        />
      </li>
      <li
        key="1"
      >
        <ColorPreview
          hex="#512B2B"
          name="Brown"
        />
      </li>
    </ul>
  </div>
</Fragment>
`;
